--- a/MegaZone/Project/ALB-EKS/ingress https.yaml
+++ b/MegaZone/Project/ALB-EKS/ingress https.yaml
@@ -7,8 +7,10 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
-    alb.ingress.kubernetes.io/ssl-redirect: '443'
-    
+    alb.ingress.kubernetes.io/actions.redirect-to-https: >
+      {"Type":"redirect","RedirectConfig":{"Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_302"}}
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:941161943134:certificate/a03fd6e3-f11c-4a4a-b337-f968c82033d5
+
 spec:
   rules:
     - http:
@@ -27,13 +29,6 @@ spec:
                 name: svc3-admin
                 port:
                   number: 9003
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: "svc1-web"
-                port:
-                  number: 9001
           - path: /
             pathType: Prefix
             backend:
