--- a/MegaZone/Project/EKS-Grafana/prometheus-svc.yaml
+++ b/MegaZone/Project/EKS-Grafana/prometheus-svc.yaml
@@ -4,8 +4,8 @@ metadata:
   name: prometheus-service
   namespace: monitoring
   annotations:
-      prometheus.io/scrape: 'true'
-      prometheus.io/port:   '9090'
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "9090"
 spec:
   selector:
     app: prometheus-server
@@ -14,20 +14,3 @@ spec:
     - port: 8080
       targetPort: 9090
       nodePort: 30003
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: loadbalancer-pro
-  namespace: monitoring
-  annotations:
-      prometheus.io/scrape: 'true'
-      prometheus.io/port:   '9090'
-spec:
-  type: LoadBalancer
-  selector:
-    app: prometheus-server
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 9090
