--- a/MegaZone/Project/EKS-Grafana/grafana.yaml
+++ b/MegaZone/Project/EKS-Grafana/grafana.yaml
@@ -15,39 +15,22 @@ spec:
         app: grafana
     spec:
       containers:
-      - name: grafana
-        image: grafana/grafana:latest
-        ports:
         - name: grafana
-          containerPort: 3000
-        env:
-        - name: GF_SERVER_HTTP_PORT
-          value: "3000"
-        - name: GF_AUTH_BASIC_ENABLED
-          value: "false"
-        - name: GF_AUTH_ANONYMOUS_ENABLED
-          value: "true"
-        - name: GF_AUTH_ANONYMOUS_ORG_ROLE
-          value: Admin
-        - name: GF_SERVER_ROOT_URL
-          value: /
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: grafana
-  namespace: monitoring
-  annotations:
-      prometheus.io/scrape: 'true'
-      prometheus.io/port:   '3000'
-spec:
-  selector:
-    app: grafana
-  type: NodePort
-  ports:
-    - port: 3000
-      targetPort: 3000
-      nodePort: 30004
+          image: grafana/grafana:latest
+          ports:
+            - name: grafana
+              containerPort: 3000
+          env:
+            - name: GF_SERVER_HTTP_PORT
+              value: "3000"
+            - name: GF_AUTH_BASIC_ENABLED
+              value: "false"
+            - name: GF_AUTH_ANONYMOUS_ENABLED
+              value: "true"
+            - name: GF_AUTH_ANONYMOUS_ORG_ROLE
+              value: Admin
+            - name: GF_SERVER_ROOT_URL
+              value: /
 ---
 apiVersion: v1
 kind: Service
@@ -55,13 +38,13 @@ metadata:
   name: loadbalancer-gra
   namespace: monitoring
   annotations:
-      prometheus.io/scrape: 'true'
-      prometheus.io/port:   '3000'
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "3000"
 spec:
   type: LoadBalancer
   selector:
     app: grafana
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 3000
+    - protocol: TCP
+      port: 80
+      targetPort: 3000
