DOC aws cloud9 add

--- a/MegaZone/Project/ALB-EKS/ingress.yaml
+++ b/MegaZone/Project/ALB-EKS/ingress.yaml
@@ -14,14 +14,14 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: svc2-guest
+                name: "svc2-guest"
                 port:
                   number: 9002
           - path: /admin
             pathType: Prefix
             backend:
               service:
-                name: svc3-admin
+                name: "svc3-admin"
                 port:
                   number: 9003
           - path: /
