--- a/MegaZone/Project/ALB-EKS/deployment.yaml
+++ b/MegaZone/Project/ALB-EKS/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: pod-webmain
-          image: registry.gitlab.com/ywon5355/test-project:v1.0
+          image: seozzang3/home:v1.0
 ---
 apiVersion: v1
 kind: Service
@@ -32,7 +32,38 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: deploy2-webevent
+  name: deploy2-webabout
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: webabout
+  template:
+    metadata:
+      labels:
+        app: webabout
+    spec:
+      containers:
+        - name: pod-webabout
+          image: seozzang3/about:v1.0
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: svc2-webabout
+spec:
+  ports:
+    - name: webabout-port
+      port: 9002
+      targetPort: 80
+  selector:
+    app: webabout
+  type: NodePort
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: deploy3-webevent
 spec:
   replicas: 1
   selector:
@@ -45,16 +76,16 @@ spec:
     spec:
       containers:
         - name: pod-webevent
-          image: seozzang3/events:v2.0
+          image: seozzang3/event:v1.0
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc2-webevent
+  name: svc3-webevent
 spec:
   ports:
     - name: webevent-port
-      port: 9002
+      port: 9003
       targetPort: 80
   selector:
     app: webevent
@@ -63,7 +94,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: deploy3-webschedule
+  name: deploy4-webschedule
 spec:
   replicas: 1
   selector:
@@ -76,17 +107,48 @@ spec:
     spec:
       containers:
         - name: pod-webschedule
-          image: httpd
+          image: seozzang3/schedule:v1.0
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc3-webschedule
+  name: svc4-webschedule
 spec:
   ports:
     - name: webschedule-port
-      port: 9003
+      port: 9004
       targetPort: 80
   selector:
     app: webschedule
+  type: NodePort
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: deploy5-webspeakers
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: webspeakers
+  template:
+    metadata:
+      labels:
+        app: webspeakers
+    spec:
+      containers:
+        - name: pod-webspeakers
+          image: seozzang3/speakers:v1.0
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: svc5-webspeakers
+spec:
+  ports:
+    - name: webspeakers-port
+      port: 9005
+      targetPort: 80
+  selector:
+    app: webspeakers
   type: NodePort
