--- a/MegaZone/Project/ALB-EKS/deployment.yaml
+++ b/MegaZone/Project/ALB-EKS/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: deploy1-webmain
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: webmain
@@ -34,7 +34,7 @@ kind: Deployment
 metadata:
   name: deploy2-webcontact
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: webcontact
@@ -45,7 +45,7 @@ spec:
     spec:
       containers:
         - name: pod-webcontact
-          image: seozzang3/contact:v2.3
+          image: registry.gitlab.com/ywon5355/test-project/contact:v1.0
 ---
 apiVersion: v1
 kind: Service
@@ -65,7 +65,7 @@ kind: Deployment
 metadata:
   name: deploy3-webevent
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: webevent
@@ -90,35 +90,3 @@ spec:
   selector:
     app: webevent
   type: NodePort
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: backend-server
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: backend-server
-  template:
-    metadata:
-      labels:
-        app: backend-server
-    spec:
-      containers:
-        - name: pod-backend-server
-          image: seozzang3/node:v3.3
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: backend
-spec:
-  type: LoadBalancer
-  selector:
-    app: backend-server
-  ports:
-    - protocol: TCP
-      port: 443
-      targetPort: 4000
