--- a/MegaZone/Project/.gitlab-ci.yml
+++ b/MegaZone/Project/.gitlab-ci.yml
@@ -18,7 +18,6 @@ build container image:
   before_script:
     - tar cvf main.tar assets Doc about.html blog.html error.html index.html schedule.html speakers.html ticket.html video.html
     - tar cvf event.tar ./event
-    - tar cvf contact.tar ./contact
   script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker build -t $CI_REGISTRY/main:v1.0 --target main .
@@ -40,15 +39,14 @@ build update image:
   before_script:
     - tar cvf main.tar assets Doc about.html blog.html error.html index.html schedule.html speakers.html ticket.html video.html
     - tar cvf event.tar ./event
-    - tar cvf contact.tar ./contact
   script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/main:v2.0 --target main .
-    - docker build -t $CI_REGISTRY/event:v2.0 --target event .
-    - docker build -t $CI_REGISTRY/contact:v2.0 --target contact .
-    - docker push  $CI_REGISTRY/main:v2.0
-    - docker push  $CI_REGISTRY/event:v2.0
-    - docker push  $CI_REGISTRY/contact:v2.0
+    - docker build -t $CI_REGISTRY/main:v3.0 --target main .
+    - docker build -t $CI_REGISTRY/event:v3.0 --target event .
+    - docker build -t $CI_REGISTRY/contact:v3.0 --target contact .
+    - docker push  $CI_REGISTRY/main:v3.0
+    - docker push  $CI_REGISTRY/event:v3.0
+    - docker push  $CI_REGISTRY/contact:v3.0
 
 validate & create cloudformation:
   stage: prepare
@@ -204,9 +202,9 @@ Update Image on EKS:
     - export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
   script:
     - aws eks --region ${AWS_DEFAULT_REGION} update-kubeconfig --name ${CLUSTER_NAME}
-    - kubectl set image deployment/deploy1-webmain registry.gitlab.com/ywon5355/test-project/main:v2.0
-    - kubectl set image deployment/deploy2-webcontact registry.gitlab.com/ywon5355/test-project/contact:v2.0
-    - kubectl set image deployment/deploy3-webevent registry.gitlab.com/ywon5355/test-project/event:v2.0
+    - kubectl set image deployment/deploy1-webmain pod-webmain=registry.gitlab.com/ywon5355/test-project/main:v3.0
+    - kubectl set image deployment/deploy2-webcontact pod-webcontact=registry.gitlab.com/ywon5355/test-project/contact:v3.0
+    - kubectl set image deployment/deploy3-webevent pod-webevent=registry.gitlab.com/ywon5355/test-project/event:v3.0
 
 destroy eks:
   stage: destroy
@@ -226,6 +224,8 @@ destroy eks:
     - aws iam detach-role-policy --role-name terraform-eks-iam-role --policy-arn ${ARN_AWS}/AmazonEC2ContainerRegistryReadOnly
     - aws iam delete-role --role-name terraform-eks-iam-role
   when: manual
+  except:
+    - update
 
 destroy cloudformation:
   stage: destroy
@@ -234,3 +234,5 @@ destroy cloudformation:
     - echo "Destroy Start"
     - aws cloudformation delete-stack --stack-name ${STACK_NAME}
   when: manual
+  except:
+    - update
